# MultiPlatformProject

./: .gitignore  README.md
Android-Wrapper/Multi-Platform-Project/: build.gradle
Android-Wrapper/Multi-Platform-Project/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android-Wrapper/Multi-Platform-Project/app/libs/freetype/: CMakeLists.txt  ft2build.h  include.cpp  include.h
Android-Wrapper/Multi-Platform-Project/app/libs/freetype/freetype/config/: ftmodule.h
Android-Wrapper/Multi-Platform-Project/app/libs/libpng/: CMakeLists.txt  png.h
Android-Wrapper/Multi-Platform-Project/app/libs/libpng/arm/: arm_init.c  filter_neon.S  filter_neon_intrinsics.c
Android-Wrapper/Multi-Platform-Project/app/libs/ndk_helper/: GLContext.cpp
Android-Wrapper/Multi-Platform-Project/app/src/androidTest/java/apple/pie/multi_platform_project/: ExampleInstrumentedTest.java
Android-Wrapper/Multi-Platform-Project/app/src/main/: AndroidManifest.xml
Android-Wrapper/Multi-Platform-Project/app/src/main/assets/ShaderCPP/: Fragment.h  Fragment_text.h  Vertex.h  Vertex_text.h
Android-Wrapper/Multi-Platform-Project/app/src/main/cpp/: ControllerAndroid.cpp  ControllerAndroid.h  Input_Android.cpp  Input_Android.h  Main.cpp  ShaderAndroid.cpp
Android-Wrapper/Multi-Platform-Project/app/src/main/cpp/Android_dep/: Android_Dependencies.cpp
Android-Wrapper/Multi-Platform-Project/app/src/main/java/apple/pie/multi_platform_project/: MainActivity.java  PieNativeActivity.java
Android-Wrapper/Multi-Platform-Project/app/src/main/java/apple/pie/multi_platform_project/helper/: NDKHelper.java
Android-Wrapper/Multi-Platform-Project/app/src/main/res/layout/: activity_main.xml
Android-Wrapper/Multi-Platform-Project/app/src/main/res/values/: strings.xml
Android-Wrapper/Multi-Platform-Project/app/src/test/java/apple/pie/multi_platform_project/: ExampleUnitTest.java
Android-Wrapper/MultiPlatformProject/gradle/wrapper/: gradle-wrapper.properties
Base/Libraries/Common/: MatrixStack.cpp  MatrixStack.h  Mtx44.cpp  Mtx44.h  MyMath.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Base/Source/: AssetManager.cpp  AssetManager.h  Broadphrase.cpp  Camera.cpp  Camera.h  Controller.cpp  Controller.h  FPS_Camera.cpp  FPS_Camera.h  GridMesh.cpp  GridMesh.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  NPC.h  NavMesh.cpp  Pathfinding.cpp  Pathfinding.h  Scene.cpp  Scene.h  Scene_Pathfinding.cpp  Scene_Pathfinding.h  Scene_SAT_Collision.cpp  Scene_SAT_Collision.h  Scene_Transformation.cpp  Scene_Transformation.h  Shape.cpp  Shape.h  Shape_Utilities.cpp  Shape_Utilities.h  SpriteRenderer.cpp  TextRenderer.cpp  TextRenderer.h  TextureLoader.cpp  TextureLoader.h  TileMap.cpp  Transform.cpp  Transform.h  UsefulUtils.cpp  (+7 more)
Base/Source/2D/: NPC.cpp  NavMesh.h  PathFollower.cpp  PathFollower.h  Scene_Pathfinding.cpp  Scene_Pathfinding.h  SpriteRenderer.h  TileMap.h
Base/Source/Collision/: GJK_Simplex3D.cpp  GJK_Simplex3D.h  Polygon_3D.cpp  Scene_Collision.cpp  Scene_Collision.h
Base/Source/CollisionTut/: ColEngine.cpp  ColEngine.h  GJK_Simplex2D.cpp  GJK_Simplex2D.h  GJK_Simplex3D.cpp  GJK_Simplex3D.h  MD_Shape.cpp  MD_Shape.h  Polygon.cpp  Polygon.h  Polygon_3D.cpp  Polygon_3D.h  Scene_Collision.cpp  Scene_Collision.h
Base/Source/Shared/: CoreUtilities.cpp  CoreUtilities.h  Header.h
Base/Source/Voxel/: Chunk.cpp  Chunk.h  Scene_Voxel.cpp  Scene_Voxel.h
Windows-Wrapper/Multi-Platform/Libraries/freetype/lib/: freetype271d.lib
Windows-Wrapper/Multi-Platform/Libraries/libpng/include/: png.h
Windows-Wrapper/Multi-Platform/Libraries/libpng/lib/: libpng.lib  libpngd.lib  zlibstat.lib  zlibstatd.lib
Windows-Wrapper/Multi-Platform/Multi-Platform/Project/: Project.sln
Windows-Wrapper/Multi-Platform/Multi-Platform/Project/Project/: Project.vcxproj  Project.vcxproj.filters
Windows-Wrapper/Multi-Platform/Multi-Platform/Shader/: Fragment.h  Fragment_text.h  Vertex.h  Vertex_text.h  Vertex_voxel.h
Windows-Wrapper/Multi-Platform/Multi-Platform/Source/: ControllerPC.cpp  ControllerPC.h  Input_PC.cpp  Input_PC.h  ShaderPC.cpp  main.cpp  timer.h
